# Streamline_Sample

./: .gitignore  CMakeLists.txt  README.md  build.bat  install.bat  make.bat
donut/: .gitignore  .gitmodules  CMakeLists.txt  README.md  compileshaders.cmake  donut-app.cmake  donut-engine.cmake  donut-render.cmake
donut/.github/workflows/: cla.yml
donut/ShaderMake/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  ThirdPartyLicenses.txt
donut/ShaderMake/.github/workflows/: build.yml  cla.yml
donut/ShaderMake/include/ShaderMake/: ShaderBlob.h
donut/ShaderMake/src/: ShaderBlob.cpp  ShaderMake.cpp  argparse.c  argparse.h
donut/cmake/: FindStreamline.cmake
donut/include/donut/app/: AftermathCrashDump.h  ApplicationBase.h  Camera.h  DeviceManager.h  DeviceManager_DX11.h  DeviceManager_DX12.h  DeviceManager_VK.h  StreamlineInterface.h  UserInterfaceUtils.h  imgui_nvrhi.h  imgui_renderer.h
donut/include/donut/core/: log.h
donut/include/donut/core/math/: matrix.h  quat.h  vector.h
donut/include/donut/core/vfs/: VFS.h
donut/include/donut/engine/: CommonRenderPasses.h  DescriptorTableManager.h  FramebufferFactory.h  MaterialBindingCache.h  SceneGraph.h  SceneTypes.h  ShaderFactory.h  ShadowMap.h  TextureCache.h  View.h
donut/include/donut/render/: DepthPass.h  ForwardShadingPass.h  GBufferFillPass.h  TemporalAntiAliasingPass.h
donut/include/donut/shaders/: binding_helpers.hlsli  bindless.h  depth_cb.h  forward_cb.h  forward_vertex.hlsli  gbuffer.hlsli  gbuffer_cb.h  hash_based_rng.hlsli  light_probe_cb.h  lighting.hlsli  material_bindings.hlsli  material_cb.h  motion_vectors.hlsli  scene_material.hlsli  shadows.hlsli  sky.hlsli  ssao_cb.h  surface.hlsli  taa_cb.h  view_cb.h  vulkan.hlsli
donut/nvrhi/: .gitignore  .gitmodules  CMakeLists.txt  README.md  ThirdPartyLicenses.txt
donut/nvrhi/.github/workflows/: build.yml  cla.yml
donut/nvrhi/cmake/: FetchAftermath.cmake
donut/nvrhi/doc/: Tutorial.md
donut/nvrhi/include/nvrhi/: d3d11.h  d3d12.h  nvrhi.h  nvrhiHLSL.h  utils.h  vulkan.h
donut/nvrhi/include/nvrhi/common/: aftermath.h  containers.h  resource.h
donut/nvrhi/rtxmu/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
donut/nvrhi/rtxmu/include/rtxmu/: AccelStructManager.h  D3D12AccelStructManager.h  D3D12Suballocator.h  Logger.h  Suballocator.h  VkAccelStructManager.h  VulkanSuballocator.h
donut/nvrhi/rtxmu/src/: D3D12AccelStructManager.cpp  D3D12Suballocator.cpp  Logger.cpp  VkAccelStructManager.cpp  VulkanSuballocator.cpp
donut/nvrhi/src/common/: aftermath.cpp  format-info.cpp  misc.cpp  sparse-bitset.cpp  sparse-bitset.h  state-tracking.cpp  state-tracking.h  utils.cpp
donut/nvrhi/src/d3d11/: d3d11-backend.h  d3d11-buffer.cpp  d3d11-commandlist.cpp  d3d11-constants.cpp  d3d11-device.cpp  d3d11-graphics.cpp  d3d11-resource-bindings.cpp  d3d11-texture.cpp
donut/nvrhi/src/d3d12/: d3d12-backend.h  d3d12-buffer.cpp  d3d12-commandlist.cpp  d3d12-constants.cpp  d3d12-device.cpp  d3d12-graphics.cpp  d3d12-meshlets.cpp  d3d12-raytracing.cpp  d3d12-resource-bindings.cpp  d3d12-state-tracking.cpp  d3d12-texture.cpp  d3d12-upload.cpp
donut/nvrhi/src/validation/: validation-backend.h  validation-commandlist.cpp  validation-device.cpp
donut/nvrhi/src/vulkan/: vulkan-allocator.cpp  vulkan-backend.h  vulkan-buffer.cpp  vulkan-commandlist.cpp  vulkan-compute.cpp  vulkan-constants.cpp  vulkan-device.cpp  vulkan-graphics.cpp  vulkan-meshlets.cpp  vulkan-queries.cpp  vulkan-queue.cpp  vulkan-raytracing.cpp  vulkan-resource-bindings.cpp  vulkan-shader.cpp  vulkan-staging-texture.cpp  vulkan-state-tracking.cpp  vulkan-texture.cpp  vulkan-upload.cpp
donut/nvrhi/tools/shaderCompiler/: shaderCompiler.cpp
donut/shaders/: CMakeLists.txt  DonutShaders.cfg  imgui_vertex.hlsl  rect_vs.hlsl  skinning_cs.hlsl
donut/shaders/passes/: depth_ps.hlsl  depth_vs.hlsl  forward_ps.hlsl  forward_vs.hlsl  gbuffer_ps.hlsl  gbuffer_vs.hlsl  joints.hlsl  light_probe.hlsl  material_id_ps.hlsl  mipmapgen_cs.hlsl  taa_cs.hlsl
donut/src/app/: ApplicationBase.cpp  Camera.cpp  DeviceManager.cpp  UserInterfaceUtils.cpp  imgui_console.cpp  imgui_nvrhi.cpp  imgui_renderer.cpp
donut/src/app/aftermath/: AftermathCrashDump.cpp
donut/src/app/dx11/: DeviceManager_DX11.cpp
donut/src/app/dx12/: DeviceManager_DX12.cpp
donut/src/app/streamline/: StreamlineIntegration.cpp  StreamlineIntegration.h
donut/src/app/vulkan/: DeviceManager_VK.cpp
donut/src/core/: log.cpp
donut/src/core/chunk/: chunkWriter.cpp
donut/src/core/vfs/: TarFile.cpp  VFS.cpp
donut/src/engine/: AudioEngine.cpp  CommonRenderPasses.cpp  DescriptorTableManager.cpp  GltfImporter.cpp  IesProfile.cpp  KeyframeAnimation.cpp  Material.cpp  MaterialBindingCache.cpp  Scene.cpp  SceneGraph.cpp  ShaderFactory.cpp  TextureCache.cpp  View.cpp
donut/src/render/: BloomPass.cpp  DeferredLightingPass.cpp  DepthPass.cpp  DrawStrategy.cpp  EnvironmentMapPass.cpp  ForwardShadingPass.cpp  GBufferFillPass.cpp  JointsRenderPass.cpp  LightProbeProcessingPass.cpp  MipMapGenPass.cpp  PixelReadbackPass.cpp  SkyPass.cpp  SsaoPass.cpp  TemporalAntiAliasingPass.cpp  ToneMappingPasses.cpp
donut/tests/src/engine/: test_console_objects.cpp
media/: sponza-plus.scene.json
media/MetalSphere/: MetalSphere.gltf
media/glTF-Sample-Models/: .gitignore
src/: NGXWrapper.cpp  NGXWrapper.h  NVWrapper.cpp  NVWrapper.h  RenderTargets.h  SLWrapper.cpp  SLWrapper.h  StreamlineSample.cpp  StreamlineSample.h  StreamlineSample.hlsl  UIData.h  UIRenderer.h  lighting_cb.h  main.cpp  shaders.cfg
src/DeviceManagerOverride/: DeviceManagerOverride.h  DeviceManagerOverride_DX11.cpp  DeviceManagerOverride_DX12.cpp  DeviceManagerOverride_VK.cpp
streamline/: streamline.md
